stylesheets/style.css
/* ... */
.logo { display:block;margin:auto;}
.main-content {max-width:1440px; margin:0 auto;}

.yelp {padding-bottom: 30px; color: #FFF;}
.yelp h2 {max-width: 600px; color: #000;}
.yelp h3 {max-width: 1200px; margin-bottom: 50px; color: #000}
.main-section2 h3 {max-width: 910px !important}
.yelp-project {padding-top: 60px;padding-bottom: 140px; }
.yelp-project  img {    display: block;margin: 0 auto;width: 80%; }
.yelp a {color: #000}

.first-dibs {background-color:#21242B}
.first-dibs h2 {max-width: 820px; }
.first-dibs h3 {max-width: 740px; margin-bottom: 50px}
.first-dibs-project {padding-top: 60px;padding-bottom: 140px;}
.first-dibs-project img {  display: block;margin: 0 auto;width: 80%;}

.pack {background-color:#21B179}
.pack h2 {max-width: 960px; padding-top: 0}
.pack h3 {max-width: 980px; margin-bottom: 50px}
.pack-project {padding-top: 60px;padding-bottom: 140px;}
.pack-project img { display: block;margin: 0 auto;width: 80%; margin-top: 40px}
.packlink {color: #000; opacity: .7; display: block; margin-bottom: 100px; font-size: 16px}
.packlink:hover {opacity: 1}

.writing {background-color:#21242B}
.writing h2 {max-width: 750px; padding-top: 0; padding-bottom: 0; color: #fff }
.writing h3 {max-width: 920px; margin-bottom: 50px; color: #fff}
.writing-project {padding-top: 60px;padding-bottom: 140px; margin-left: 3%; margin-right: 3%;}
.writing-project img {    float: left;    width: 31.3%;}
.center-writing {margin-left: 3%; margin-right: 3%}
.writing a {color: #fff}

.designs {background-color:#74a1d5}
.designs h2 {max-width: 750px; padding-top: 0; padding-bottom: 0; color: #fff }
.designs h3 {max-width: 920px; margin-bottom: 50px; color: #fff}
.designs-project {padding-top: 60px;padding-bottom: 140px; margin-left: 3%; margin-right: 3%;}
.designs-project img {    float: left;    width: 31.3%;}
.center-design {margin-left: 3%; margin-right: 3%}
.designs a {color: #fff}

.extra {background-color:#3982C3}
.extra h2 {max-width: 720px;padding-top: 0; padding-bottom: 0 }
.extra h3 {max-width: 920px; margin-bottom: 50px}
.extra-project {padding-top: 60px;padding-bottom: 120px;}
.extra-project img {    display: block;margin: 0 auto;width: 50%;}

.projectsheader {width: 100%;  padding-bottom: 80px;padding-top: 80px;}
#projects {max-width:1440px; margin:0 auto}
.large-project {    display: block;width: 100%;margin-left: auto; margin-right: auto; max-width: 1400px;}
.small-project {    display: block;width: 50%;margin-left: auto; margin-right: auto; max-width: 1400px;}
.mini-project {display: block;width: 25%;margin-left: auto; margin-right: auto; max-width: 1400px;}
.medium-project {    display: block;width: 70%;margin-left: auto; margin-right: auto; max-width: 1400px;}
.project-section { margin: 70px auto; max-width: 1400px;}
.project-section-gray {background-color: #a8a8a8; padding-bottom: 60px; padding-top: 60px;}
.project-section h3 { font-size: 16px;
    color: #000;
    font-family: 'Roboto', sans-serif;
    text-align: centerr;
    text-transform: uppercase;
    letter-spacing: 2px;}
.project-section p {font-size: 16px;
    color: #000;
    float: right;
    width: 80%;
    line-height: 34px;}
.project-title {margin-bottom: 40px}
.project-section img {margin-bottom: 80px}


.project-section-gray h3 { color: #fff;
    font-size: 16px;
    margin-top: 30px;
    text-align: center;}

.middle-project {margin-top: 60px}
/*#projects-dibs {padding-top: 60px; padding-bottom: 60px}
#projects-dibs img {   display: block;margin-bottom: 60px;margin-left: auto;margin-right: auto;width: 70%;}
.project_section3 img {width: 50% !important}
 .project_section3 { padding: 60px 0; margin-bottom:60px}*/
.footer {padding-top: 20px; padding-bottom: 20px;border-top: 1px solid #e0e0e0;}
.footer p {text-align: center; color: #b2b2b2;
    font-size: 14px;text-transform: uppercase;font-family: 'Roboto', sans-serif;letter-spacing: 2px;
}


.header-writing {color:#000; text-align: center;font-weight: 300; background-color: #fff }
.header-writing h1 {font-size: 30px; color: #fff}
.header-writing h2 {padding:0;}
.header-writing h3 {padding-top: 25px; font-size: 26px}
.header-writing { padding: 75px 0;  }
.header-writing a {color: #067683}

.traingle {font-size: 14px;
    padding-left: 5px;
    position: relative;
    opacity: 0.4;
    top: -1px;}

.project-section-pack {  margin-left: 60px;
    margin-right: 60px;
    padding-bottom: 60px;
    padding-top: 60px}

.project-section-pack p {color: #000; max-width: 910px}


#next-project {  margin-left: 60px;margin-right: 60px;padding-bottom: 140px; text-align: center;    font-family: 'Roboto', sans-serif;}
#next-project h4 { margin-bottom: 30px; text-align: center; font-size: 16px;text-transform: uppercase;}
#next-project a {text-decoration: none; color: #333; line-height: 55px;}
#next-project a:hover {color: #aaa}

#next-project-writing {  margin-left: 60px;margin-right: 60px; margin-top: 100px; padding-bottom: 140px; text-align: center;    font-family: 'Roboto', sans-serif;}
#next-project-writing h4 { margin-bottom: 30px; text-align: center; font-size: 16px;text-transform: uppercase;}
#next-project-writing a {text-decoration: none; color: #333; line-height: 55px;}
#next-project-writing a:hover {color: #aaa}

.about {background-color: #fff;
    border-bottom: 1px solid #e4e4e4;
    padding-bottom: 100px;
    padding-top: 60px;
    position: absolute;
    width: 100%;display: none;}
.about p {width: 960px; margin: 0 auto;     color: #333333;
    font-size: 18px;
    font-weight: 300;}
.img1 {background-image: url("../images/img1.jpg");float: left;width: 450px; margin-right: 20px}
.img2 {background-image: url("../images/img2.jpg");float: left;width: 450px;}
.img3 {background-image: url("../images/img3.jpg");float: left;width: 400px;margin-right: 100px}
.img4 {background-image: url("../images/img4.jpg");float: left;width: 400px;}
.the-images {background-position: center center;background-repeat: no-repeat;background-size: cover;height: 350px;}
/* ... */

